# shairport-mqtt-web

./: .gitignore  Makefile  README.md  app.py  config.yaml.example  gunicorn.conf.py  pyproject.toml  shairport-mqtt-web.service
static/: style.css
templates/: index.html
